--- a/index.html
+++ b/index.html
@@ -11,27 +11,54 @@
 body{margin:0;font-family:tahoma,Arial;background:var(--bg);color:#222}
 .step{display:none}
 .step.active{display:block}
-.header{background:var(--red);color:#fff;padding:14px 10px;text-align:center;font-weight:bold}
-.flag{font-size:28px;display:block;line-height:1}
-.sub{text-align:center;margin:10px 0 0;font-size:14px;color:#555}
-.footer{text-align:center;color:#777;font-size:12px;margin:18px 0}
-.note{text-align:center;font-size:12px;color:#888;margin-top:6px}
+
+/* Header */
+.header{background:var(--red);color:#fff;padding:14px;text-align:center;font-weight:bold}
+.flag{font-size:28px;display:block}
+.sub{text-align:center;margin:10px 0;color:#555;font-size:14px}
+
+/* Envelopes */
+.envelopes{
+  max-width:420px;margin:16px auto;
+  display:grid;grid-template-columns:repeat(3,1fr);
+  gap:12px;padding:0 10px
+}
+.env{
+  position:relative;height:120px;
+  background:#e6e6e6;border-radius:12px;
+  overflow:hidden;cursor:pointer;
+  box-shadow:0 6px 12px rgba(0,0,0,.12)
+}
+.env .lid{
+  position:absolute;top:0;left:0;right:0;height:55%;
+  background:#dcdcdc;
+  transform-origin:top center;
+  transition:transform .6s ease;
+}
+.env .body{
+  position:absolute;inset:0;
+  display:flex;align-items:center;justify-content:center;
+  font-size:22px;color:#777;
+  text-align:center;padding:10px
+}
+.env.opened .lid{transform:rotateX(160deg)}
+.env.opened .body{
+  background:var(--red);
+  color:#fff;
+  font-size:16px;
+  line-height:1.6
+}
+
+/* Result */
+.result{text-align:center;font-size:18px;color:var(--red);min-height:24px}
+
+/* Form */
 .center{max-width:420px;margin:0 auto;padding:12px}
 .card{background:#fff;border-radius:12px;box-shadow:0 10px 20px rgba(0,0,0,.12);padding:16px}
+.input{width:100%;padding:12px;border-radius:8px;border:1px solid #ddd;margin-bottom:10px}
 .btn{width:100%;padding:12px;border-radius:10px;border:none;background:var(--red);color:#fff;font-size:16px;cursor:pointer}
-.input{width:100%;padding:12px 14px;border-radius:8px;border:1px solid #ddd;margin-bottom:10px;font-size:15px}
 
-/* envelopes */
-.envelopes{max-width:420px;margin:16px auto;display:grid;grid-template-columns:repeat(3,1fr);gap:12px;padding:0 10px}
-.env{position:relative;height:120px;background:#e6e6e6;border-radius:10px;overflow:hidden;cursor:pointer;box-shadow:0 6px 12px rgba(0,0,0,.12)}
-.env .lid{position:absolute;top:0;left:0;right:0;height:55%;background:#dcdcdc;transform-origin:top center;transition:transform .55s}
-.env .body{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:26px;color:#777}
-.env.opened .lid{transform:rotateX(160deg)}
-.env.opened .body{background:var(--red);color:#fff;font-size:16px}
-
-.result{text-align:center;font-size:18px;color:var(--red);min-height:28px;margin-top:6px}
-.share{display:flex;gap:10px}
-.share a{flex:1;text-align:center;text-decoration:none}
+.footer{text-align:center;color:#777;font-size:12px;margin:18px 0}
 </style>
 </head>
 
@@ -55,37 +82,16 @@ body{margin:0;font-family:tahoma,Arial;background:var(--bg);color:#222}
   </div>
 
   <div id="result" class="result"></div>
-  <div class="note">* المكافآت تُمنح عبر مهام ومشاركات</div>
 </section>
 
 <!-- STEP 2 -->
 <section id="step2" class="step">
   <div class="center">
     <div class="card">
-      <h3 style="margin-top:0;text-align:center">تسجيل الدخول</h3>
+      <h3 style="text-align:center;margin-top:0">تسجيل الدخول</h3>
       <input class="input" id="name" placeholder="الاسم الكامل">
       <input class="input" id="phone" placeholder="رقم الهاتف">
-      <button class="btn" id="sendBtn">متابعة</button>
-      <div class="note">سيتم التواصل معك لاحقًا</div>
-    </div>
-  </div>
-</section>
-
-<!-- STEP 3 -->
-<section id="step3" class="step">
-  <div class="center">
-    <div class="card">
-      <h3 style="margin-top:0;text-align:center">انشرها لتحصل على نقاط</h3>
-      <p style="text-align:center;color:#555">
-        شارك الرابط في مجموعتك للمشاركة بالفرصة.
-      </p>
-      <div class="share">
-        <a class="btn" target="_blank"
-           href="https://t.me/share/url?url=https://example.com&text=جرب حظك الآن">
-           مشاركة على تلغرام
-        </a>
-      </div>
-      <div class="note">النقاط توضيحية (بدون نظام حساب)</div>
+      <button class="btn">متابعة</button>
     </div>
   </div>
 </section>
@@ -93,56 +99,29 @@ body{margin:0;font-family:tahoma,Arial;background:var(--bg);color:#222}
 <div class="footer">© 2025</div>
 
 <script>
-/* إعدادات تلغرام */
-const BOT_TOKEN="8530299273:AAHH0iDVc60tDNnxtTuqDS17DWPXIBl9X50";
-const CHAT_ID="5516597110";
-
-/* نتائج قانونية */
-const outcomes=[
-  "🎉 ربحت مكافأة 10,000 نقطة",
-  "🏆 جائزة خاصة بانتظارك",
-  "💰 قيمة الجائزة قد تصل إلى 10,000 ل.ت*",
-  "🎁 مكافأة ترحيبية كبرى"
-];
-
 let locked=false;
 
-/* تنقّل الخطوات */
-function showStep(n){
-  document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));
-  document.getElementById('step'+n).classList.add('active');
-}
-
-/* ربط الضغط على الأظرف (بدون inline) */
+/* ربط الأظرف */
 document.querySelectorAll('.env').forEach(env=>{
-  env.addEventListener('click', ()=>{
+  env.addEventListener('click',()=>{
     if(locked) return;
     locked=true;
+
     env.classList.add('opened');
-    env.querySelector('.body').textContent='✔';
+
+    // رسالة داخل الظرف
+    env.querySelector('.body').innerHTML =
+      "🎉 <strong>ربحت</strong><br>💰 <strong>10,000 نقطة</strong>";
+
     document.getElementById('result').textContent =
-      outcomes[Math.floor(Math.random()*outcomes.length)];
-    setTimeout(()=>showStep(2), 1200); // التحويل المؤكد
+      "تم الفوز بنجاح";
+
+    // ⏱️ بعد 3 ثواني → صفحة التسجيل
+    setTimeout(()=>{
+      document.getElementById('step1').classList.remove('active');
+      document.getElementById('step2').classList.add('active');
+    }, 3000);
   });
-});
-
-/* إرسال لتلغرام ثم الانتقال للمشاركة */
-document.getElementById('sendBtn').addEventListener('click', ()=>{
-  const name=document.getElementById('name').value.trim();
-  const phone=document.getElementById('phone').value.trim();
-  if(!name||!phone){ alert('يرجى إدخال جميع البيانات'); return; }
-
-  const text=
-    "📥 تسجيل جديد\n\n"+
-    "👤 الاسم: "+name+"\n"+
-    "📞 الهاتف: "+phone+"\n"+
-    "🕒 "+new Date().toLocaleString();
-
-  fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`,{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({chat_id:CHAT_ID,text})
-  }).then(()=>showStep(3));
 });
 </script>
 
